--- a/src/css/index.css
+++ b/src/css/index.css
@@ -20,8 +20,8 @@ body {
 /* MAIN */
 body {
     background-color: var(--color1);
-    text-align: center;
     min-height: 100vh;
+    text-align: center;
 }
 main {
     padding: 20px;
@@ -33,12 +33,40 @@ h1 {
     font-size: 4rem;
 }
 form {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+    margin: 40px 0;
 }
 form label {
-    display: inline-block;
     max-width: 500px;
+    text-align: start;
+}
+form label input {
+    display: block;
+    max-width: 75%;;
+    padding: 10px;
+    border-radius: 10px;
+    border: 3px solid var(--color2);
+}
+form label input:focus {
+    outline: none;
+}
+input[type="button"] {
+    grid-column: 1 / 3;
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: none;
+    background-color: var(--color2);
+    cursor: pointer;
+    transition: .3s transform, .3s color;
+}
+input[type="button"]:hover {
+    color: gray;
+    transform: translateY(-5px);
+}
+.respuesta {
+    font-weight: bold;
 }
 
 /* FOOTER */
@@ -46,14 +74,49 @@ footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    padding: 20px;
     background-color: var(--color2);
 }
-footer a {
+footer ul {
+    padding: 0;
+    list-style: none;
+}
+footer ul li {
+    display: inline-block;
+    padding: 5px;
+    transition: .3s transform;
+}
+footer ul li a {
+    padding: 10px;
     color: black;
     text-decoration: none;
+    transition: .3s color;
 }
-footer a:hover {
-    color: red;
-    transform: translate(20px, 10px);
+footer ul li:hover {
+    transform: translateY(-5px);
+}
+footer ul li:hover a {
+    color: gray;
+}
+
+/* MEDIA QUERIS */
+@media (max-width: 790px) {
+    main {
+        padding: 10px;
+    }
+    h1 {
+        font-size: 2rem;
+    }
+    form label {
+    
+        width: 100%;
+    }
+    form label input {
+        max-width: 100%;
+    }
+}
+@media (max-width: 520px) {
+    footer {
+        position: initial;
+        padding: 5px;
+    }
 }
