--- a/src/css/index.css
+++ b/src/css/index.css
@@ -13,24 +13,24 @@ html {
     font-family: 'Shantell Sans', cursive;
 }
 body {
+    position: relative;
     margin: 0;
     padding: 0;
-}
-
-/* MAIN */
-body {
     background-color: var(--color1);
     min-height: 100vh;
     text-align: center;
 }
+
+/* MAIN */
 main {
-    padding: 20px;
+    position: relative;
+    padding: 20px 20px 70px;
     max-width: 1000px;
     margin: 0 auto;
 }
 h1 {
     margin-top: none;
-    font-size: 4rem;
+    font-size: calc(2rem + 1vw);
 }
 form {
     display: grid;
@@ -39,12 +39,11 @@ form {
     margin: 40px 0;
 }
 form label {
-    max-width: 500px;
     text-align: start;
 }
 form label input {
     display: block;
-    max-width: 75%;;
+    max-width: 100%;;
     padding: 10px;
     border-radius: 10px;
     border: 3px solid var(--color2);
@@ -101,22 +100,6 @@ footer ul li:hover a {
 /* MEDIA QUERIS */
 @media (max-width: 790px) {
     main {
-        padding: 10px;
-    }
-    h1 {
-        font-size: 2rem;
-    }
-    form label {
-    
-        width: 100%;
-    }
-    form label input {
-        max-width: 100%;
-    }
-}
-@media (max-width: 520px) {
-    footer {
-        position: initial;
-        padding: 5px;
+        padding: 10px 10px 70px;
     }
 }
