--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,15 +3,17 @@
     --color1: #FFF1DC;
     --color2: #E8D5C4;
 }
+
 html {
-    scroll-behavior: smooth;
     font-size: 62.5%;
 }
+
 * {
     box-sizing: border-box;
     font-size: 1.8rem;    
     font-family: 'Shantell Sans', cursive;
 }
+
 body {
     position: relative;
     margin: 0;
@@ -21,6 +23,10 @@ body {
     text-align: center;
 }
 
+.desactivado {
+    display: none;
+}
+
 /* MAIN */
 main {
     position: relative;
@@ -28,19 +34,23 @@ main {
     max-width: 1000px;
     margin: 0 auto;
 }
+
 h1 {
     margin-top: none;
     font-size: calc(2rem + 1vw);
 }
+
 form {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
     margin: 40px 0;
 }
+
 form label {
     text-align: start;
 }
+
 form label input {
     display: block;
     max-width: 100%;;
@@ -48,9 +58,11 @@ form label input {
     border-radius: 10px;
     border: 3px solid var(--color2);
 }
+
 form label input:focus {
     outline: none;
 }
+
 input[type="button"] {
     grid-column: 1 / 3;
     padding: 10px 20px;
@@ -60,10 +72,30 @@ input[type="button"] {
     cursor: pointer;
     transition: .3s transform, .3s color;
 }
+
 input[type="button"]:hover {
     color: gray;
     transform: translateY(-5px);
 }
+
+.numeros-repetidos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    cursor: pointer;
+}
+
+input[type="checkbox"] {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+}
+
+input[type="checkbox"]:checked label:nth-last-child() {
+    color: blue;
+}
+
 .respuesta {
     font-weight: bold;
 }
@@ -75,24 +107,29 @@ footer {
     width: 100%;
     background-color: var(--color2);
 }
+
 footer ul {
     padding: 0;
     list-style: none;
 }
+
 footer ul li {
     display: inline-block;
     padding: 5px;
     transition: .3s transform;
 }
+
 footer ul li a {
     padding: 10px;
     color: black;
     text-decoration: none;
     transition: .3s color;
 }
+
 footer ul li:hover {
     transform: translateY(-5px);
 }
+
 footer ul li:hover a {
     color: gray;
 }
